--- a/index.html
+++ b/index.html
@@ -3,11 +3,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Auto Save Textarea</title>
     <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 </head>
 <body>
     <div class="container">
-        <h1>Auto Save Textarea</h1>
-        <textarea id="myTextarea" rows="10" cols="30" placeholder="Start typing here..."></textarea>
+        <div class="header">
+            <h1>Auto Save Textarea</h1>
+            <i class="fa-solid fa-rotate-right fa-lg reload"></i>
+        </div>
+        <textarea id="myTextarea" rows="10" cols="60" placeholder="Start typing here..."></textarea>
     </div>
     <script src="script.js"></script>
 
